--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,10 @@
     "env": {
         "amd": true,
         "jquery": true
+    },
+    "globals": {
+        "self": "readonly",
+        "chrome": "readonly"
     }
 }
 
